# amazon-dropshipping-arbitrage-app

./: .gitignore  .trufflehog-ignore  README.md  env.example  package.json
.github/workflows/: ci-cd.yml  dependency-update.yml  security-scan.yml
ai-service/: Dockerfile  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
ai-service/tests/: test_main.py
backend/: Dockerfile  jest.config.js  package.json
backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
backend/src/config/: app.config.ts  database.config.ts
backend/src/health/: health.controller.ts
backend/src/modules/ai/: ai.controller.ts  ai.module.ts
backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  (+2 more)
backend/test/: app.e2e-spec.ts  setup.ts
database/: schema.sql
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf  prometheus.yml
entities/: automation-rule.entity.ts  price-update-log.entity.ts  supplier-product.entity.ts
frontend/: .gitignore  .prettierrc  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/__tests__/: page.test.tsx
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/lib/: api.ts
frontend/src/store/: auth.ts  ui.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  components.ts  index.ts
frontend/src/utils/: format.ts  validation.ts
src/app/: globals.css
tests/e2e/: cypress.config.js
tests/e2e/support/: commands.js  e2e.js
(+74 files in other folders)
